@@ -1,4 +1,5 @@
 0.8.0 - currently working on
+- [#4906] Fix: Test crash in Tx_Oelib_TemplateHelperTest in PHP 5.3
 - [#4905] Fix: Add the encoding for all mb_* functions
 - [#4873] Feature: Add Template.render()
 - [#4874] Feature: Add DataMapper.getTableName
